; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/rcheevos/src/rcheevos/extr_operand.c_rc_parse_operand.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/rcheevos/src/rcheevos/extr_operand.c_rc_parse_operand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rc_parse_operand(i32* %0, i8** %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i8**, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store i8** %1, i8*** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  %10 = load i32, i32* %8, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %17

12:                                               ; preds = %4
  %13 = load i32*, i32** %6, align 8
  %14 = load i8**, i8*** %7, align 8
  %15 = load i32*, i32** %9, align 8
  %16 = call i32 @rc_parse_operand_trigger(i32* %13, i8** %14, i32* %15)
  store i32 %16, i32* %5, align 4
  br label %22

17:                                               ; preds = %4
  %18 = load i32*, i32** %6, align 8
  %19 = load i8**, i8*** %7, align 8
  %20 = load i32*, i32** %9, align 8
  %21 = call i32 @rc_parse_operand_term(i32* %18, i8** %19, i32* %20)
  store i32 %21, i32* %5, align 4
  br label %22

22:                                               ; preds = %17, %12
  %23 = load i32, i32* %5, align 4
  ret i32 %23
}

declare dso_local i32 @rc_parse_operand_trigger(i32*, i8**, i32*) #1

declare dso_local i32 @rc_parse_operand_term(i32*, i8**, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
